# law-rag

./: .gitignore  kanoni.ipynb  kanoni.py  main.py  pyproject.toml
api/: main.py  pyproject.toml
api/db/: vector_store.py
api/model/: kanoni.py
app/: package.json  vite.config.ts
app/src/routes/: +page.server.ts  +page.svelte  schema.ts
db/: vector_store.py
model/: kanoni.py
